framec/tests/snapshots/kotlin_snapshots__state_args.snap
---
source: framec/tests/kotlin_snapshots.rs
expression: "compile_fixture(\"04_state_args\", \"kotlin\")"
---
class StateArgsFrameEvent(val _message: String, val _parameters: MutableList<Any?> = mutableListOf())

class StateArgsFrameContext(val _event: StateArgsFrameEvent, var _return: Any? = null) {
    val _data: MutableMap<String, Any?> = mutableMapOf()
    var _transitioned: Boolean = false
}

class StateArgsCompartment(val state: String) {
    val state_args: MutableList<Any?> = mutableListOf()
    val state_vars: MutableMap<String, Any?> = mutableMapOf()
    val enter_args: MutableList<Any?> = mutableListOf()
    val exit_args: MutableList<Any?> = mutableListOf()
    var forward_event: StateArgsFrameEvent? = null
    var parent_compartment: StateArgsCompartment? = null

    fun copy(): StateArgsCompartment {
        val c = StateArgsCompartment(this.state)
        c.state_args.addAll(this.state_args)
        c.state_vars.putAll(this.state_vars)
        c.enter_args.addAll(this.enter_args)
        c.exit_args.addAll(this.exit_args)
        c.forward_event = this.forward_event
        c.parent_compartment = this.parent_compartment
        return c
    }
}

class StateArgs {
    private var _state_stack: MutableList<StateArgsCompartment>
    private var __compartment: StateArgsCompartment
    private var __next_compartment: StateArgsCompartment?
    private var _context_stack: MutableList<StateArgsFrameContext>

    init {
        _state_stack = mutableListOf()
        _context_stack = mutableListOf()
        this.__compartment = __prepareEnter("Idle", mutableListOf<Any?>(), mutableListOf<Any?>())
        this.__next_compartment = null
    }

    fun __frame_init() {
        val __e = StateArgsFrameEvent("$>", __compartment.enter_args)
        val __ctx = StateArgsFrameContext(__e, null)
        _context_stack.add(__ctx)
        __kernel(__e)
        _context_stack.removeAt(_context_stack.size - 1)
    }

    private fun hsm_chain(): Map<String, List<String>> {
        return mapOf(
            "Idle" to listOf("Idle"),
            "Holding" to listOf("Holding"),
        )
    }
    private fun __prepareEnter(leaf: String, state_args: MutableList<Any?>, enter_args: MutableList<Any?>): StateArgsCompartment {
        var comp: StateArgsCompartment? = null
        for (name in hsm_chain()[leaf]!!) {
            val new_comp = StateArgsCompartment(name)
            new_comp.state_args.addAll(state_args)
            new_comp.enter_args.addAll(enter_args)
            new_comp.parent_compartment = comp
            comp = new_comp
        }
        return comp!!
    }

    private fun __prepareExit(exit_args: MutableList<Any?>) {
        var comp: StateArgsCompartment? = __compartment
        while (comp != null) {
            comp.exit_args.clear()
            comp.exit_args.addAll(exit_args)
            comp = comp.parent_compartment
        }
    }

    private fun __kernel(__e: StateArgsFrameEvent) {
        // Route event to current state.
        __router(__e)
        // Drain any transitions queued by the handler.
        while (__next_compartment != null) {
            val next_compartment: StateArgsCompartment = __next_compartment!!
            __next_compartment = null
            // Exit the current (leaf) state.
            val exit_event = StateArgsFrameEvent("<$", __compartment.exit_args)
            __router(exit_event)
            // Switch to the new compartment.
            __compartment = next_compartment
            // Three-branch forward-event handling.
            val forward_event: StateArgsFrameEvent? = next_compartment.forward_event
            next_compartment.forward_event = null
            if (forward_event == null) {
                // No forwarded event — synthesize a fresh $>.
                val enter_event = StateArgsFrameEvent("$>", __compartment.enter_args)
                __router(enter_event)
            } else if (forward_event._message == "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event)
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                val enter_event = StateArgsFrameEvent("$>", __compartment.enter_args)
                __router(enter_event)
                __router(forward_event)
            }
            for (ctx in _context_stack) {
                ctx._transitioned = true
            }
        }
    }

    private fun __router(__e: StateArgsFrameEvent) {
        if (__compartment.state == "Idle") {
            _state_Idle(__e, __compartment)
        } else if (__compartment.state == "Holding") {
            _state_Holding(__e, __compartment)
        }
    }

    private fun __transition(next: StateArgsCompartment) {
        __next_compartment = next
    }

    fun load(initial: Int) {
        val __e = StateArgsFrameEvent("load", mutableListOf(initial))
        val __ctx = StateArgsFrameContext(__e, null)
        _context_stack.add(__ctx)
        __kernel(_context_stack[_context_stack.size - 1]._event)
        _context_stack.removeAt(_context_stack.size - 1)
    }

    fun adjust(delta: Int) {
        val __e = StateArgsFrameEvent("adjust", mutableListOf(delta))
        val __ctx = StateArgsFrameContext(__e, null)
        _context_stack.add(__ctx)
        __kernel(_context_stack[_context_stack.size - 1]._event)
        _context_stack.removeAt(_context_stack.size - 1)
    }

    fun peek(): Int {
        val __e = StateArgsFrameEvent("peek", mutableListOf())
        val __ctx = StateArgsFrameContext(__e, 0)
        _context_stack.add(__ctx)
        __kernel(_context_stack[_context_stack.size - 1]._event)
        val __result = _context_stack[_context_stack.size - 1]._return as Int
        _context_stack.removeAt(_context_stack.size - 1)
        return __result
    }

    private fun _state_Idle(__e: StateArgsFrameEvent, compartment: StateArgsCompartment) {
        if (__e._message == "load") {
            this._s_Idle_hdl_user_load(__e, compartment)
            return
        }
    }

    private fun _state_Holding(__e: StateArgsFrameEvent, compartment: StateArgsCompartment) {
        val value = (__compartment.state_args[0] as Number).toInt()
        if (__e._message == "adjust") {
            this._s_Holding_hdl_user_adjust(__e, compartment)
            return
        }
        if (__e._message == "peek") {
            this._s_Holding_hdl_user_peek(__e, compartment)
            return
        }
    }

    private fun _s_Idle_hdl_user_load(__e: StateArgsFrameEvent, compartment: StateArgsCompartment) {
        val initial = __e._parameters[0] as Int
        val __compartment = __prepareEnter("Holding", mutableListOf<Any?>(initial), mutableListOf<Any?>())
        __transition(__compartment)
        return
    }

    private fun _s_Holding_hdl_user_adjust(__e: StateArgsFrameEvent, compartment: StateArgsCompartment) {
        val value = (compartment.state_args[0] as Number).toInt()
        val delta = __e._parameters[0] as Int
        val __compartment = __prepareEnter("Holding", mutableListOf<Any?>(value + delta), mutableListOf<Any?>())
        __transition(__compartment)
        return
    }

    private fun _s_Holding_hdl_user_peek(__e: StateArgsFrameEvent, compartment: StateArgsCompartment) {
        val value = (compartment.state_args[0] as Number).toInt()
        _context_stack[_context_stack.size - 1]._return = value
    }

    companion object {
        @JvmStatic fun __create(): StateArgs {
            val c = StateArgs()
            c.__frame_init()
            return c
        }    }
}
